bpk-lib/crates/syncbat/tests/ui/operation_macro_generic_fn.stderr
error: #[syncbat::operation] does not support generic functions
 --> tests/ui/operation_macro_generic_fn.rs:9:8
  |
9 | fn echo<T>(_input: &[u8], _cx: &mut syncbat::Cx<'_>) -> syncbat::HandlerResult {
  |        ^
